WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
260376
WebCore\DerivedSources\JSReadableStreamSource.cpp: warning: unused function 'jsReadableStreamSource_controller'
https://bugs.webkit.org/show_bug.cgi?id=260376
Summary
WebCore\DerivedSources\JSReadableStreamSource.cpp: warning: unused function '...
Fujii Hironori
Reported
2023-08-17 21:51:58 PDT
WebCore\DerivedSources\JSReadableStreamSource.cpp: warning: unused function 'jsReadableStreamSource_controller' clang-cl reports the following warning for Windows port.
> WebKitBuild\Debug\WebCore\DerivedSources\JSReadableStreamSource.cpp(145,26): warning: unused function 'jsReadableStreamSource_controller' [-Wunused-function]
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-08-24 21:52:14 PDT
<
rdar://problem/114428573
>
Ian Grunert
Comment 2
2023-08-28 12:47:08 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/17139
EWS
Comment 3
2023-08-29 13:39:42 PDT
Committed
267420@main
(e693585f93ab): <
https://commits.webkit.org/267420@main
> Reviewed commits have been landed. Closing PR #17139 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug