WebCore\DerivedSources\JSReadableStreamSource.cpp: warning: unused function 'jsReadableStreamSource_controller' https://bugs.webkit.org/show_bug.cgi?id=260376

Reviewed by Fujii Hironori.

Emit UNUSED_PARAM for the attributeGetterName to prevent compiler
warning in clang-cl.

* Source/WebCore/bindings/scripts/CodeGeneratorJS.pm:
(GenerateAttributeGetterTrampolineDefinition):

Canonical link: https://commits.webkit.org/267420@main